add KL expansion to transforms work

--- a/common/analyses.tex
+++ b/common/analyses.tex
@@ -292,122 +292,9 @@ Let $\latL\eqd\latocd$ be an algebraic structure.
   Analyses typically have one subspace that is a \hie{scaling} subspace;
   and this subspace is often simply a family of constants
   (as is the case with \structe{Fourier Analysis}).
-  There is one noteable exception to this---MRA induced \structe{wavelet analysis} \xref{def:wavelet}.
-\end{minipage}%
-\hfill%
-{\begin{minipage}{60mm}%
-  \begin{center}
-%  \mbox{}\\% force (just above?) top of graphic to be the top of the minipage
-  \includegraphics{../common/math/graphics/pdfs/latmn.pdf}%
-  \end{center}
-\end{minipage}}
-
-
-
-%  An analysis can be represented using three different structures:
-%    %\paragraph{Equivalence of lattice representations.}
-%    %So far we have discussed representing a wavelet analysis using three different structures:
-%\\\begin{tabular}{@{\qquad}ll}
-%  \circOne    & sequence of subspaces             \\
-%  \circTwo    & sequence of basis vectors         \\
-%  \circThree  & sequence of basis coefficients
-%\end{tabular}\\
-%These structures are isomorphic to each other---and can therefore be used interchangeably.
-%%(see \prefp{thm:VPb_isomorphic}).
-%%(see \prefp{fig:wav_VPb_isomorphic}).
-%%That is, a ``\hie{wavelet analysis}" can be described using any of these structures.
-%%However, sometimes when introducing theorems about wavelets,
-%%it is convenient to use elements from not just one, but from multiple lattices;
-%%and so it is convenient to have a ``collection" of wavelet analysis elements
-%%all assembled together into one formally defined tuple.
-%%\pref{def:wavsys} (next) does just that---it defines a \hie{wavelet analysis} in terms of a tuple with elements
-%%extracted from the four wavelet structures.
-%
-%\mbox{}\\
-%%---------------------------------------
-%% isomorphic lattices
-%%---------------------------------------
-%%\begin{figure}[th]
-%  \begin{center}%
-%  \begin{fsL}%
-%  \begin{minipage}[c]{12\tw/16}
-%  \begin{minipage}[c]{4\tw/16}%
-%  \center
-%  \latmatlw{4}{0.5}
-%    {
-%           &       & \null                 \\
-%           & \null                         \\
-%     \null &       & \null &       & \null \\
-%           &       & \null
-%    }
-%    {\ncline{1,3}{2,2}\ncline{2,2}{3,1}
-%     \ncline{1,3}{3,5}
-%     \ncline{2,2}{3,3}
-%     \ncline{4,3}{3,1}\ncline{4,3}{3,3}\ncline{4,3}{3,5}
-%    }
-%    {\nput{ 90}{1,3}{$\spV_3$}
-%     \nput{135}{2,2}{$\spV_2$}
-%     \nput{180}{3,1}{$\spV_1$}
-%     \nput{ 67}{3,3}{$\spW_1$}
-%     \nput{  0}{3,5}{$\spW_2$}
-%     \nput{-90}{4,3}{$\spZero$}
-%    }
-%  \end{minipage}
-%  \hfill{\Large$\thickapprox$}\hfill
-%  \begin{minipage}[c]{4\tw/16}%
-%  \center
-%  \latmatlw{4}{0.5}
-%    {
-%           &       & \null                 \\
-%           & \null                         \\
-%     \null &       & \null &       & \null \\
-%           &       & \null
-%    }
-%    {\ncline{1,3}{2,2}\ncline{2,2}{3,1}
-%     \ncline{1,3}{3,5}
-%     \ncline{2,2}{3,3}
-%     \ncline{4,3}{3,1}\ncline{4,3}{3,3}\ncline{4,3}{3,5}
-%    }
-%    {\nput{ 90}{1,3}{$\seqn{h_n}_3$}
-%     \nput{135}{2,2}{$\seqn{h_n}_2$}
-%     \nput{180}{3,1}{$\seqn{h_n}_1$}
-%     \nput{ 67}{3,3}{$\seqn{g_n}_1$}
-%     \nput{  0}{3,5}{$\seqn{g_n}_2$}
-%     \nput{-90}{4,3}{$\opZero$}
-%    }
-%  \end{minipage}
-%  \hfill{\Large$\thickapprox$}\hfill
-%  \begin{minipage}[c]{4\tw/16}%
-%  \center
-%  \latmatlw{4}{0.5}
-%    {
-%           &       & \null                 \\
-%           & \null                         \\
-%     \null &       & \null &       & \null \\
-%           &       & \null
-%    }
-%    {\ncline{1,3}{2,2}\ncline{2,2}{3,1}
-%     \ncline{1,3}{3,5}
-%     \ncline{2,2}{3,3}
-%     \ncline{4,3}{3,1}\ncline{4,3}{3,3}\ncline{4,3}{3,5}
-%    }
-%    {\nput{ 90}{1,3}{$\seqn{\phi_{3,m}}$}
-%     \nput{135}{2,2}{$\seqn{\phi_{2,m}}$}
-%     \nput{180}{3,1}{$\seqn{\phi_{1,m}}$}
-%     \nput{ 67}{3,3}{$\seqn{\psi_{1,m}}$}
-%     \nput{  0}{3,5}{$\seqn{\psi_{2,m}}$}
-%     \nput{-90}{4,3}{$\opZero$}
-%    }
-%  \end{minipage}
-%\end{minipage}
-%\end{fsL}
-%\end{center}
-%%\caption{
-%%  Subspace, coefficient, and basis lattice isomorphisms
-%%  \label{fig:wav_VPb_isomorphic}
-%%  }
-%%\end{figure}
-
+  There is one noteable exception to this---MRA induced \structe{wavelet analysis}\ifsxref{wavstrct}{def:wavelet}.
+\end{minipage}\hfill%
+\tboxc{\includegraphics{../common/math/graphics/pdfs/latmn.pdf}}
 
 %=======================================
 \section{Operator inducing analyses}
@@ -510,7 +397,7 @@ Moreover, P.G. Lemari/'e has proved that all wavelets with \prope{compact suppor
   }
 
 %=======================================
-\section{Wavelets stand out}
+%\section{Wavelets stand out}
 %=======================================
 
 \mbox{}\\
@@ -543,7 +430,7 @@ However, there are an infinite number of wavelet basis sequences---lots and lots
 For information regarding designing wavelet basis sequences, see \citer{greenhoe2013wsd}.
 
 However, one arguable disadvantage is that wavelets do not support a \thmb{convolution theorem}---a theorem 
-enjoyed by all the Fourier transforms, Laplace Transform, and Z Transform.
+enjoyed by the Fourier transforms, Laplace Transform, and Z Transform.
 These other transforms induce a convolution theorem because they are defined in terms of an exponential
 (e.g. $e^{-i\omega t}$, $e^{-i\omega n}$, $e^{-st}$, $z^{-n}$),
 and exponentials sport the property $a^{x+y}=a^xa^y$.
