--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -22,8 +22,26 @@
   }
   \footnotetext{\begin{tabular}[t]{ll}
     quote: & \citerpg{gao2011h}{19}{9781441915450}\\  %\citerppc{fourier1822e}{7}{8}{Preliminary Discourse}\\
-    image: & \scs\url{http://en.wikipedia.org/wiki/File:Fourier2.jpg}, public domain
+    image: & \url{http://en.wikipedia.org/wiki/File:Fourier2.jpg}, public domain
   \end{tabular}}
+
+%======================================
+\section{Introduction}
+%======================================
+Historically, before the Fourier Transform was the Taylor Expansion (transform). 
+The Taylor Expansion demonstrates that for \propb{analytic} functions
+knowledge of the derivatives of a function at a location $x=a$
+allows you to determine (predict) arbitrarily closely all the points $\ff(x)$ in the vicinity of $x=a$ \xref{chp:taylor}.
+But analytic functions are by definition functions for which all their derivatives exist.
+Thus, if a function is \prope{discontinuous}, it is simply not a candidate for a Taylor Expansion.
+And some 300 years ago, mathematician giants of the day were fairly content with this.
+
+But then in came an engineer named Joseph Fourier whose day job was working as a governor of lower Egypt under Napolean.
+He claimed that, rather than expansion based on derivatives, one could expand based on integrals over sinusoids,
+and that this would work not just for analytic functions, but for \propb{discontinuous} ones as well!\footnote{\citePp{robinson1982}{886}}
+
+Needless to say, this did not go over too well initially in the mathematical community. 
+But over time (on the order of 200 or so years), the Fourier Transform has in many ways won the day.
 
 %======================================
 \section{Definitions}
