--- a/common/polynom.tex
+++ b/common/polynom.tex
@@ -1438,7 +1438,7 @@ Let $\fieldF$ be a \structe{field}.
     image: & \url{http://commons.wikimedia.org/wiki/File:Euklid-von-Alexandria_1.jpg}, public domain
     }
 
-
+\ifdochasnot{taylor}{
 %--------------------------------------
 \begin{theorem}[\thmd{Taylor Series}]
 \footnote{
@@ -1452,23 +1452,23 @@ Let $\fieldF$ be a \structe{field}.
   }
 \label{thm:taylor}
 %--------------------------------------
-Let $\spC$ be the space of all continuously differentiable real functions
-and $\hxs{\opDif}$ in $\clF{\spC}{\spC}$ the differentiation operator. 
+Let $\spC$ be the space of all \prope{analytic} functions
+and $\hxs{\opDif}$ in $\clF{\spC}{\spC}$ the \ope{differentiation operator}. 
 \thmboxt{
-  %A \hid{Taylor series} about the point $a$ of a function $ff\in\clF{\spC}{\spC}$ is
+  A \opd{Taylor series} about the point $a$ of a function $\ff\in\clF{\spC}{\spC}$ is
   $\ds\begin{array}{rc>{\ds}l@{\qquad}C@{\qquad}D}
     \ff(x) &=& \sum_{n=0}^\infty \frac{\brs{\opDif^n\ff}(a)}{n!}\:(x-a)^n
            &   \forall a\in\R,\,\ff\in\spC
-           &   (\hie{Taylor series} about the point $a$) \index{series!Taylor}
+           &   (\ope{Taylor series} about the point $a$) \index{series!Taylor}
     %\\
     %\ff(x) &=& \sum_{n=0}^\infty \frac{\brs{\opDif^n\ff}(0)}{n!}\: x^n
     %       &   \forall \ff\in\spC
     %       &   (\hie{Maclaurin series}) \index{series!Maclaurin}
   \end{array}$
-  \\A \hid{Maclaurin series} is a \fncte{Taylor series} about the point $a=0$.
+  \\A \opd{Maclaurin series} is a \fncte{Taylor series} about the point $a=0$.
   }
 \end{theorem}
-
+}
 
 %---------------------------------------
 \begin{theorem}[\thmd{Binomial Theorem}]
