--- a/common/sty/switches.sty
+++ b/common/sty/switches.sty
@@ -111,6 +111,8 @@
 \newboolean{pwspace}
 \newboolean{pwrspec}
 \newboolean{random}
+\newboolean{randprocess}
+\newboolean{randseq}
 \newboolean{relation}
 \newboolean{relneg}
 \newboolean{sampling}
