--- a/common/taylor.tex
+++ b/common/taylor.tex
@@ -4,6 +4,10 @@
 %============================================================================
 %=======================================
 \chapter{Taylor Expansions (Transforms)}
+\label{chp:taylor}
+%=======================================
+%=======================================
+\section{Introduction}
 %=======================================
 For modeling real-world processes above the quantum level, measurements are \prope{continuous} in time---that is,
 the first derivative of a function over time representing the measurement \prope{exists}.
@@ -81,4 +85,31 @@ On the other hand, the \ope{Fourier Transform} is a kind of counter-part of the 
             \\\hline
         \end{tabular}
 
+%=======================================
+\section{Taylor Expansion}
+%=======================================
+%--------------------------------------
+\begin{theorem}[\thmd{Taylor Series}]
+\footnote{
+  \citerpgc{flanigan1983}{221}{0486613887}{Theorem 15},
+  \citerpg{strichartz1995}{281}{0867204710},
+  \citerpgc{sohrab2003}{317}{0817642110}{Theorem 8.4.9},
+  \citor{taylor},
+  \citor{maclaurin}
+  %\citerc{as}{pages 14, 880}
+  %\citerp{mallat}{164}
+  }
+\label{thm:taylor}
+%--------------------------------------
+Let $\spC$ be the space of all \prope{analytic} functions
+and $\hxs{\opDif}$ in $\clF{\spC}{\spC}$ the \ope{differentiation operator}. 
+\thmboxt{
+  A \opd{Taylor Series} about the point $x=a$ of a function $\ff(x)\in\clF{\spC}{\spC}$ is
+  \\\indentx$\ds\begin{array}{rc>{\ds}lC}
+    \ff(x) &=& \sum_{n=0}^\infty \mcom{\frac{\brs{\opDif^n\ff}(a)}{n!}}{coefficient}\:\mcoml{(x-a)^n}{basis function}
+           &   \forall a\in\R,\,\ff\in\spC
+  \end{array}$
+  \\A \opd{Maclaurin Series} is a \ope{Taylor Series} about the point $a=0$.
+  }
+\end{theorem}
 
