replace thus far unsubstantiated Fourier quote

--- a/abcstat/front.tex
+++ b/abcstat/front.tex
@@ -58,68 +58,17 @@
 %---------------------------------------
 %\input{../common/xsdfront.tex}
 %---------------------------------------
-% copyright page (page vi)
+% typesetting page
 %---------------------------------------
 \newpage
 \renewcommand{\headrulewidth}{1pt}
 \thispagestyle{empty}%
 \mbox{}\\\vfill
 \addcontentsline{toc}{section}{Typesetting}
-{\sffamily
-This text was typeset using \hi{\XeLaTeX},
-which is part of the \TeX family of typesetting engines, 
-which is arguably the greatest development since the \hi{Gutenberg Press}.
-Graphics were rendered using the \hie{pstricks} and related packages, and \hi{\LaTeX} graphics support.
-%and the \hie{pgfplots} package (for rendering the Pollen 3-d wavelet appearing on the cover and in \prefp{fig:pollen4}).
-%Data for some figures was generated using \hie{GNU Octave}---a free alternative to {\footnotesize MATLAB}.
-
-%\begin{sloppypar} 
-The main {\rmfamily roman}, {\itshape italic}, and {\bfseries bold} font typefaces used 
-are all from the \hie{Heuristica} family of typefaces
-(based on the \hie{Utopia} typeface, released by \hie{Adobe Systems Incorporated}).
-The math font is {{\fntXits XITS}} from the {{\fntXits XITS font project}}.
-The font used in quotation boxes is adapted from {\fntZapf Zapf Chancery Medium Italic},
-originally from URW++ Design and Development Incorporated.
-The font used for the text in the title is {\fntAdventor Adventor} (similar to \hie{Avant-Garde}) from the \hie{\TeX-Gyre Project}.
-The font used for the ISBN in the footer of individual pages is 
-\mbox{\fntDigital\footnotesize Liquid} \mbox{\fntDigital\footnotesize Crystal} 
-%{\fntDigital Liq}-{\fntDigital uid Crystal} 
-(\hie{Liquid Crystal}) from \hie{FontLab Studio}.
-The Latin handwriting font is {\fntLavi Lavi} from the \hie{Free Software Foundation}.
-%The traditional Chinese font used for the author's Chinese name 
-%is {{\fntzhthw 王漢宗中仿宋繁}}.\footnote{\sffamily%
-%pinyin: \hi{W{/'a}ng H{/`an} Z{/=o}ng Zh/=ong F{/va}ng S{/`o}ng F{/'an}}; 
-%translation: H/`an Z/=ong W/'ang's Medium-weight S/`ong-style Traditional Characters;
-%literal:
-%{\fntzhthw 王漢宗}$\sim$font designer's name;
-%{\fntzhthw 中}$\sim$medium;
-%{\fntzhthw 仿}$\sim$to imitate;
-%{\fntzhthw 宋}$\sim$S/`ong (a dynasty);
-%{\fntzhthw 繁}$\sim$traditional
-%}
-%Chinese glyphs appearing elsewhere in the text are from the font {{\fntzht 王漢宗中明體繁}}.\footnote{\sffamily%
-%pinyin: \hi{W{/'a}ng H{/`an} Z{/-o}ng Zh/-ong Mi{/'n}g T{/>i} F{/'an}}; 
-%translation: H/`an Z/=ong W/'ang's Medium-weight Mi{/'n}g-style Traditional Characters;
-%literal:
-%{\fntzhthw 王漢宗}$\sim$font designer's name;
-%{\fntzhthw 中}$\sim$medium;
-%{\fntzhthw 明}$\sim$Mi{/'n}g (a dynasty);
-%{\fntzhthw 體}$\sim$style;
-%{\fntzhthw 繁}$\sim$traditional
-%}
-%%\end{sloppypar}
-
-\textimgr[11mm]{../common/graphics/watercraft/ghind_blue.pdf}{%
-  The ship 
-  %$\ds\brp{\text{\raisebox{-2mm}{\includegraphics*[height=8mm]{../common/graphics/watercraft/ghindgray_djg.eps}}}}$
-  appearing throughout this text is loosely based on the \hie{Golden Hind}, a sixteenth century English galleon 
-  famous for circumnavigating the globe.\footnotemark
-  }
-\footnotetext{\citerpgc{paine2000}{63}{0395984149}{Golden Hind}}
-}
+\input{../common/typesetting.tex}
 \vfill
 %---------------------------------------
-% Dedication (page iii)
+% Dedication
 %---------------------------------------
 %---------------------------------------
 % quote page pair (odd page vii then even page viii)
@@ -131,8 +80,6 @@ The Latin handwriting font is {\fntLavi Lavi} from the \hie{Free Software Founda
 %---------------------------------------
 \cleartooddpage
 \markboth{{Symbols}}{{Symbols}}
-%\addcontentsline{toc}{section}{Symbols}
-%\fancyhf[HOL,HER]{{Symbols}}
 \input{../common/symbols.tex}
 %---------------------------------------
 % Symbol Index (page xi)
@@ -141,7 +88,6 @@ The Latin handwriting font is {\fntLavi Lavi} from the \hie{Free Software Founda
 \chapter*{Symbol Index}
 \thispagestyle{empty}%
 \markboth{{Symbol Index}}{{Symbol Index}}
-%\fancyhf[HOL,HER]{{Symbol Index}}
 \addcontentsline{toc}{section}{Symbol index}
 \begin{multicols}{4}
   \input{xsym.ind}
@@ -151,7 +97,6 @@ The Latin handwriting font is {\fntLavi Lavi} from the \hie{Free Software Founda
 %---------------------------------------
 \cleartoevenpage
 \markboth{}{}
-%\fancyhf[HOL,HER]{}
 %---------------------------------------
 % Contents (pages xiii--xix)
 %---------------------------------------
@@ -177,18 +122,4 @@ The Latin handwriting font is {\fntLavi Lavi} from the \hie{Free Software Founda
 %---------------------------------------
 \cleartooddpage
 \pagenumbering{arabic}%
-%\cleartooddpage
 \setcounter{page}{1}%
-
-
-
-
-
-
-
-
-
-
-
-
-
