--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -9,6 +9,23 @@
 \index{fourier analysis}
 \label{app:fourier}
 %======================================
+%20191118 can't sufficiently substantiate
+%20191118\qboxnpq{
+%20191118  Joseph Fourier (1768--1830)
+%20191118  \index{Fourier, Joseph}
+%20191118  \index{quotes!Fourier, Joseph}
+%20191118  \footnotemark
+%20191118  }
+%20191118  {../common/people/fourier_bunzil_wkp_pdomain_gray.jpg}
+%20191118  {%
+%20191118  An arbitrary function, continuous or with discontinuities, defined in a finite interval by an arbitrarily
+%20191118  capricious graph can always be expressed as a sum of sinusoids%
+%20191118  }
+%20191118  \footnotetext{\begin{tabular}[t]{ll}
+%20191118    quote: & \citer{fourier1822}, \citer{fourier1822e}, \citerpg{gao2011h}{19}{9781441915450}\\  %https://a2i2.deakin.edu.au/2016/08/24/signal-analysis-fourier-transform-or-wavelet-transform/
+%20191118    image: & \url{http://en.wikipedia.org/wiki/File:Fourier2.jpg}, public domain
+%20191118  \end{tabular}}
+
 \qboxnpq{
   Joseph Fourier (1768--1830)
   \index{Fourier, Joseph}
@@ -17,11 +34,20 @@
   }
   {../common/people/fourier_bunzil_wkp_pdomain_gray.jpg}
   {%
-  An arbitrary function, continuous or with discontinuities, defined in a finite interval by an arbitrarily
-  capricious graph can always be expressed as a sum of sinusoids%
+  Up to this point we have supposed that the function
+  whose development is required in a series of sines of multiple
+  arcs can be developed in a series arranged according to powers
+  of the variable x, 
+  %and that only odd powers enter into that series. 
+  \ldots
+  We can extend the same results to any functions, even
+  to those which are discontinuous and entirely arbitrary.
+  \ldots
+  even entirely arbitrary functions may be developed in series of sines
+  of multiple arcs.
   }
   \footnotetext{\begin{tabular}[t]{ll}
-    quote: & \citerpg{gao2011h}{19}{9781441915450}\\  %\citerppc{fourier1822e}{7}{8}{Preliminary Discourse}\\
+    quote: & \citerpc{fourier1822e}{184,186}{\textsection 219,220}\\
     image: & \url{http://en.wikipedia.org/wiki/File:Fourier2.jpg}, public domain
   \end{tabular}}
 
@@ -40,8 +66,19 @@ But then in came an engineer named Joseph Fourier whose day job was working as a
 He claimed that, rather than expansion based on derivatives, one could expand based on integrals over sinusoids,
 and that this would work not just for analytic functions, but for \propb{discontinuous} ones as well!\footnote{\citePp{robinson1982}{886}}
 
+\begin{minipage}{\tw-80mm}
 Needless to say, this did not go over too well initially in the mathematical community. 
 But over time (on the order of 200 or so years), the Fourier Transform has in many ways won the day.
+\end{minipage}\hfill%
+\tboxc{\includegraphics[width=75mm]{../common/graphics/portraits/legendre_fourier.jpg}\footnotemark}
+\footnotetext{
+  Caricature of Legendre (left) and Fourier (right), 1820,
+  by Julien-L/'eopold Boilly (1796--1874).
+  ``\emph{Album de 73 Portraits-Charge Aquarelle's des Membres de I'Institute} (watercolor portrait \#29). 
+  Biliotheque de l'Institut de France."
+  Public domain.
+  \url{https://en.wikipedia.org/wiki/File:Legendre_and_Fourier_(1820).jpg}
+  }
 
 %======================================
 \section{Definitions}
@@ -593,9 +630,9 @@ the \ope{Fourier Transform} of $\ff(x)$.
 %--------------------------------------
 \begin{definition}
 \footnote{
-  \citerpp{jawerth}{16}{17},
-  \citerp{sweldens93}{2},
-  \citerp{vidakovic}{83}  
+  \citePpp{jawerth}{16}{17},
+  \citePp{sweldens93}{2},
+  \citerpg{vidakovic}{83}{9780471293651}  
   %\citerp{goswami}{102}    \\
   %\citerpp{mallat}{241}{243}
   }
@@ -625,20 +662,22 @@ $\Ff(\omega)\eqd\brs{\opFT\ff}(\omega)$ the \fncte{Fourier transform} \xref{def:
   \begin{align*}
     \sqrt{2\pi}(i)^n\brs{\opddwn \Ff(\omega)}_{\omega=0} 
       &= \sqrt{2\pi}(i)^n\brs{\opddwn  \fscale\int_\R \ff(x) \fkernea{x}{\omega}\dx}_{\omega=0} 
-      && \text{by definition of $\opFT$ \xref{def:opFT}}
+      && \text{by definition of $\opFT$}
+      && \text{\xref{def:opFT}}
     \\&= \left.(i)^n\int_\R \ff(x) \brs{\opddwn    \fkernea{x}{\omega}}\dx\right|_{\omega=0} 
     \\&= \left.(i)^n\int_\R \ff(x) \brs{(-i)^n x^n \fkernea{x}{\omega}}\dx\right|_{\omega=0} 
     \\&= (-i^2)^n \int_\R \ff(x) x^n \dx
     \\&= \int_\R \ff(x) x^n \dx
     \\&\eqd \fM_n
-      && \text{by definition of $\fM_n$ \xref{def:Mn_ft}}
+      && \text{by definition of $\fM_n$}
+      && \text{\xref{def:Mn_ft}}
   \end{align*}
 \end{proof}
 
 %--------------------------------------
 \begin{lemma}
 \footnote{
-  \citerpp{vidakovic}{82}{83},
+  \citerppg{vidakovic}{82}{83}{9780471293651},
   \citerpp{mallat}{241}{242}
   }
 \label{lem:vanish_deriv}
@@ -685,9 +724,9 @@ $\Ff(\omega)\eqd\brs{\opFT\ff}(\omega)$ the \fncte{Fourier transform} \xref{def:
 \begin{lemma}[\lemd{Strang-Fix condition}]
 \label{lem:sfixceq}
 \footnote{
-  \citerpp{jawerth}{16}{17},
-  \citerp{sweldens93}{2},
-  \citerp{vidakovic}{83},
+  \citePpp{jawerth}{16}{17},
+  \citePp{sweldens93}{2},
+  \citerpg{vidakovic}{83}{9780471293651},
   %\citerp{goswami}{102},
   \citerpp{mallat}{241}{243},
   \citor{fix1969}
@@ -710,12 +749,13 @@ Let $\opTrn$ be the \fncte{translation operator} \xref{def:opT}.
       \brs{\opddwn  \Ff(\omega)}_{\omega=2\pi k}
         &= \sum_{k\in\Z} \brs{\opddwn  \Ff(\omega)}_{\omega=2\pi k}  e^{i2\pi kx} \kdelta_k
       \\&= \cft \sum_{k\in\Z} \brs{\opddwn \int_\R  \ff(x) e^{-i\omega x} \dx}_{\omega=2\pi k} e^{i2\pi kx}  \kdelta_k
-        && \text{by \prefp{def:opFT}}
-       %&& \text{by definition of $\Ff(\omega)$ \xref{def:opFT}}
+        && \text{by definition of $\Ff(\omega)$}
+        && \text{\xref{def:opFT}}
       \\&= \cft \sum_{k\in\Z} \brs{\int_\R  \ff(x)(-ix)^n e^{-i\omega x} \dx}_{\omega=2\pi k} e^{i2\pi kx}  \kdelta_k
       \\&= (-i)^n \cft \sum_{k\in\Z} \brs{\int_\R  x^n \ff(x)  e^{-i\omega x} \dx}_{\omega=2\pi k} e^{i2\pi kx}  \kdelta_k
       \\&= (-i)^n \cft \sum_{k\in\Z} (x-k)^n \ff(x-k)  \kdelta_k
-        && \text{by \thme{PSF} \xref{thm:psf}}
+        && \text{by \thme{PSF}}
+        && \text{\xref{thm:psf}}
       \\&= \cft (-i)^n \kdelta_k \fM_n
         && \text{by left hypothesis}
     \end{align*}
