--- a/common/randseq_eigen.tex
+++ b/common/randseq_eigen.tex
@@ -238,7 +238,7 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
          && \text{\xref{idef:kle_xdot}}
        \\&= \sum_{n\in\Z}\brp{\int_{u\in\R}\pE\brs{\rvx(t)\rvx^\ast(u)}\fpsi_n(u)\du} \fpsi_n^\ast(t)
          && \text{by \prope{linearity}}
-         && \text{\xref{thm:pE_linop}}
+         && \text{\ifxref{expectation}{thm:pE_linop}}
        \\&\eqd \sum_{n\in\Z}\brp{\int_{u\in\R}\Rxx(t,u)\fpsi_n(u)\du} \fpsi_n^\ast(t)
          && \text{by definition of $\Rxx(t,u)$}
          && \text{\xref{def:Rxx}}
@@ -258,7 +258,7 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
                   \xref{idef:kle_xdot}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \pE\brs{\rvx(u)\rvx^\ast(v)}\fpsi_m(v)\dv} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
          && \text{by \prope{linearity} 
-                  \xref{thm:pE_linop}}
+                  \ifxref{expectation}{thm:pE_linop}}
        \\&= \sum_{n\in\Z}\sum_{m\in\Z}\int_u\brp{\int_v \Rxx(u,v)\fpsi_m(v)\dv} \fpsi_n^\ast(u)\du   \fpsi_n(t)   \fpsi_m^\ast(t)
          && \text{by definition of $\Rxx(t,u)$ 
                   \xref{def:Rxx}}
@@ -294,7 +294,7 @@ and $\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ such that
        - \pE\brs{\rvx(t)\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t)}^\ast}
        - \pE\brs{\rvx^\ast(t)\sum_{n\in\Z}\dotx_n \fpsi_n(t)}
        + \pE\brs{\sum_{n\in\Z}\dotx_n \fpsi_n(t) \brs{\sum_{m\in\Z}\dotx_m \fpsi_m(t) }^\ast }
-    \\&\qquad\text{by \prope{linearity} of $\pE$ \xref{thm:pE_linop}}
+    \\&\qquad\text{by \prope{linearity} of $\pE$ \ifxref{expectation}{thm:pE_linop}}
     \\&= \mcom{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}{by \pref{ilem:kle_mercer}}
        - \mcom{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}{by \pref{ilem:kle_1}}
        - \mcom{\brs{\sum_{n\in\Z}\lambda_n \abs{\fpsi_n(t)}^2}^\ast}{by \pref{ilem:kle_1}}
