baslat alternative color scheme

--- a/common/frames.tex
+++ b/common/frames.tex
@@ -2187,7 +2187,7 @@ Let $\opS$ be the \ope{frame operator} \xref{def:frameop} with \ope{inverse} $\o
     \quad${\forall\scy n\in\setn{0,1,\ldots,\xN-1}}$.\\
     Then, $\seqn{\vx_0,\vx_1,\ldots,\vx_{\xN-1}}$ is a \structb{tight frame} for $\R^2$ with 
       \vale{frame bound} $A=\frac{\xN r^2}{2}$. 
-  \end{array}$\tbox{\includegraphics{graphics/frameR2N.pdf}}
+  \end{array}$\tbox{\includegraphics{../common/math/graphics/pdfs/frameR2N.pdf}}
   \\
   Moreover,\quad
   $\opS=\frac{\xN r^2}{2}\matIrr$,\quad
@@ -2371,7 +2371,7 @@ Let $\opS$ be the \ope{frame operator} \xref{def:frameop} with \ope{inverse} $\o
     \\and\qquad$\ds\vv =    \frac{2}{3}\sum_{n=1}^{3} \inprod{\vv}{\vx_n} \vx_n
                        \eqd \frac{2}{3}\sum_{n=1}^{3} \brp{\vv^\opH\vx_n} \vx_n$\qquad $\scy\forall\vv\in\R^2$.
   \end{array}%
-  \tbox{\includegraphics{graphics/mframe01.pdf}}
+  \tbox{\includegraphics{../common/math/graphics/pdfs/mframe01.pdf}}
   }
 \end{example}
 \begin{proof}
@@ -2437,7 +2437,7 @@ Let $\opS$ be the \ope{frame operator} \xref{def:frameop} with \ope{inverse} $\o
     %Moreover, $\opSi\vx_1=\sfrac{1}{3}\vp$, $\opSi\vx_2=\sfrac{1}{3}\vp+\sfrac{1}{2}\vq$ 
     %and $\opSi\vx_3=\sfrac{1}{3}\vp-\sfrac{1}{2}\vq$. 
   \end{array}$
-  \tbox{\includegraphics{graphics/frameR2pq.pdf}}
+  \tbox{\includegraphics{../common/math/graphics/pdfs/frameR2pq.pdf}}
   $\begin{array}{Mr@{\hspace{1pt}}c@{\hspace{1pt}}lD}
     \mc{5}{M}{Moreover,} 
           \\  & \opSi\vx_1 &=& \sfrac{1}{3}\vp                 & and
