port graphic calls to ../common/math/graphics/pdfs; abctran

--- a/common/analyses.tex
+++ b/common/analyses.tex
@@ -299,12 +299,12 @@ Let $\latL\eqd\latocd$ be an algebraic structure.
 %=======================================
 \section{Operator inducing analyses}
 %=======================================
-\tboxc{\includegraphics{graphics/opTrn.pdf}}\hfill
+\tboxc{\includegraphics{../common/math/graphics/pdfs/opTrn.pdf}}\hfill
 \begin{minipage}{\tw-120mm}
   An \structe{analysis} is often defined in terms of \\a small number (e.g. 2) operators.
   Two such operators are the \ope{translation operator} and the \ope{dilation operator}\ifsxref{transop}{def:opTD}.
 \end{minipage}
-\hfill\tboxc{\includegraphics{graphics/opDil.pdf}}
+\hfill\tboxc{\includegraphics{../common/math/graphics/pdfs/opDil.pdf}}
 
 %---------------------------------------
 \begin{example}
