--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -287,8 +287,8 @@ Let $\convd$ be the convolution operator \xref{def:dsp_conv}.
 %---------------------------------------
 \begin{figure}
   \centering
-  \includegraphics[width=\tw/2-2mm]{graphics/iir2n.pdf}
-  \includegraphics[width=\tw/2-2mm]{graphics/dfI_order2_156.pdf}
+  \includegraphics[width=\tw/2-2mm]{../common/math/graphics/pdfs/iir2n.pdf}
+  \includegraphics[width=\tw/2-2mm]{../common/math/graphics/pdfs/dfI_order2_156.pdf}
   \caption{Direct form 1 order 2 IIR filters\label{fig:df1iir2}}
 \end{figure}
 \begin{align*}
@@ -321,8 +321,8 @@ illustrated in \prefpp{fig:pz_minphase}.
 \begin{figure}[h]
   \centering%
   \begin{tabular}{cc}
-    \includegraphics{graphics/pz_realcoefs.pdf}%
-    &\includegraphics{graphics/pz_minphase.pdf}%
+    \includegraphics{../common/math/graphics/pdfs/pz_realcoefs.pdf}%
+    &\includegraphics{../common/math/graphics/pdfs/pz_minphase.pdf}%
     \\\emph{not} minimum phase & \prope{minimum phase}
   \end{tabular}
   \caption{Minimum Phase filter\label{fig:pz_minphase}}
@@ -358,8 +358,6 @@ near the beginning of its support, as demonstrated next.
   }
 \label{thm:ztr_redp}
 \label{thm:redt}
-\index{minimum phase!energy}
-\index{energy}
 %--------------------------------------
 Let $\fp(z)\eqd\sum_{n=0}^\xN a_n z^{-n}$
 and $\fq(z)\eqd\sum_{n=0}^\xN b_n z^{-n}$
@@ -386,8 +384,8 @@ But for more \prope{symmetry}, put some zeros inside and some outside the unit c
   \hline
   Daubechies-4 & Symlets-4
   \\\hline
-  \includegraphics{graphics/D4_pz.pdf}&\includegraphics{graphics/S4_pz.pdf} \\
-  \includegraphics{graphics/d4_phi_h.pdf}&\includegraphics{graphics/s4_phi_h.pdf}\\
+  \includegraphics{../common/math/graphics/pdfs/D4_pz.pdf}&\includegraphics{../common/math/graphics/pdfs/S4_pz.pdf} \\
+  \includegraphics{../common/math/graphics/pdfs/d4_phi_h.pdf}&\includegraphics{../common/math/graphics/pdfs/s4_phi_h.pdf}\\
   \hline
   \prope{minimum phase} & \emph{not} minimum phase
   \\\hline
@@ -460,8 +458,8 @@ A causal LTI filter is \propb{stable} if all of its poles are \propb{inside} the
   \centering%
   \begin{tabular}{|c|c|}
      \hline
-     \includegraphics{graphics/pz_stable.pdf}
-    &\includegraphics{graphics/pz_unstable.pdf}
+     \includegraphics{../common/math/graphics/pdfs/pz_stable.pdf}
+    &\includegraphics{../common/math/graphics/pdfs/pz_unstable.pdf}
     \\stable & unstable
     \\\hline
 \end{tabular}
@@ -484,8 +482,8 @@ Stable/unstable filters are illustrated in \prefpp{fig:pz_unstable}.
   \centering
   \begin{tabular}{|c|c|}
       \hline
-    \\\includegraphics{graphics/dfI_order2_fir.pdf}
-     &\includegraphics{graphics/pz_pole00.pdf}
+    \\\includegraphics{../common/math/graphics/pdfs/dfI_order2_fir.pdf}
+     &\includegraphics{../common/math/graphics/pdfs/pz_pole00.pdf}
     \\\hline
   \end{tabular}
   \caption{FIR filters \label{fig:fir}}
@@ -508,8 +506,8 @@ True or False? This filter has no poles:
 %---------------------------------------
 \begin{figure}
   \centering
-  \includegraphics{graphics/pz_minphase.pdf}%
-  \includegraphics{graphics/pz_realcoefs_11.pdf}
+  \includegraphics{../common/math/graphics/pdfs/pz_minphase.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/pz_realcoefs_11.pdf}
 \caption{Conjugate pair structure yielding real coefficients\label{fig:realcoefs}}
 \end{figure}
 
@@ -592,7 +590,7 @@ complex conjugate pairs.
 
 \begin{figure}[ht]
   \centering
-  \includegraphics{graphics/pz_realcoefs.pdf}
+  \includegraphics{../common/math/graphics/pdfs/pz_realcoefs.pdf}
   \caption{
      Pole-zero plot for rational expression with real coefficients
      \label{fig:pz}
@@ -866,9 +864,9 @@ and each \structe{pole} becomes a \structe{zero}.
 \begin{figure}
 \centering
 $\begin{array}{ccccc}
-     \tbox{\includegraphics{graphics/pz_minphase.pdf}}
+     \tbox{\includegraphics{../common/math/graphics/pdfs/pz_minphase.pdf}}
     &\tbox{$\times$}
-    &\tbox{\includegraphics{graphics/pz_minphase_inv.pdf}}
+    &\tbox{\includegraphics{../common/math/graphics/pdfs/pz_minphase_inv.pdf}}
     &\tbox{$=$}
     &\tbox{$1$}
   \\
@@ -883,11 +881,11 @@ $\begin{array}{ccccc}
 \end{figure}
 
 \begin{tabular}{ccccc}
-     \tbox{\includegraphics{graphics/pz_unstable2.pdf}}
+     \tbox{\includegraphics{../common/math/graphics/pdfs/pz_unstable2.pdf}}
     &\tbox{$\times$}&
-     \tbox{\includegraphics{graphics/pz_allpass.pdf}}
+     \tbox{\includegraphics{../common/math/graphics/pdfs/pz_allpass.pdf}}
     &\tbox{$=$}&
-     \tbox{\includegraphics{graphics/pz_unall.pdf}}
+     \tbox{\includegraphics{../common/math/graphics/pdfs/pz_unall.pdf}}
   \\unstable&&all-pass&&stable!
 \end{tabular}
 
