--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -944,9 +944,9 @@ Let $\Ff(\omega)$ be the \fncte{Fourier transform} of a function $\ff(x)\in\spLL
         e^{-i\brp{\frac{a+b}{2}\omega}}
         \brs{\frac{\sin\brp{\frac{b-a}{2}\omega}}{\brp{\frac{b-a}{2}\omega}}}
   \\
-  \includegraphics{graphics/pulseabc.pdf} 
+  \includegraphics{../common/math/graphics/pdfs/pulseabc.pdf} 
   & 
-  \includegraphics{graphics/pulseabcft.pdf}
+  \includegraphics{../common/math/graphics/pdfs/pulseabcft.pdf}
 \end{array}}
 \end{example}
 \begin{proof}
@@ -993,8 +993,8 @@ Let $\Ff(\omega)$ be the \fncte{Fourier transform} of a function $\ff(x)\in\spLL
         \brs{\frac{\sin\brp{\frac{b-a}{4}\omega}}{\brp{\frac{b-a}{4}\omega}}}^2
   \\
   \mc{2}{c}{
-    \includegraphics{graphics/triangleabc.pdf} \hspace{10mm} 
-    \includegraphics{graphics/triangleabcft.pdf}
+    \includegraphics{../common/math/graphics/pdfs/triangleabc.pdf} \hspace{10mm} 
+    \includegraphics{../common/math/graphics/pdfs/triangleabcft.pdf}
     }
 \end{array}}
 \end{example}
@@ -1121,7 +1121,7 @@ Let a function $\ff$ be defined in terms of the cosine function \xref{def:cos} a
   &
   \Ff(\omega) = \frac{1}{2\sqrt{2\pi}}\Big[{\mcom{\frac{2\sin\omega}{\omega}}{$2\sinc(\omega)$}+\mcom{\frac{\sin(\omega+\pi)}{(\omega+\pi)}}{$\sinc(\omega+\pi)$} + \mcom{\frac{\sin(\omega-\pi)}{(\omega-\pi)}}{$\sinc(\omega-\pi)$}}\Big]
   \\
-  \includegraphics{graphics/coscos11.pdf}&\includegraphics{graphics/coscos11ft.pdf}
+  \includegraphics{../common/math/graphics/pdfs/coscos11.pdf}&\includegraphics{../common/math/graphics/pdfs/coscos11ft.pdf}
 \end{array}}
 \end{example}
 \begin{proof}
