--- a/common/harPoly.tex
+++ b/common/harPoly.tex
@@ -223,7 +223,7 @@ The cosine with argument $nx$ can be expanded as a polynomial in $\cos(x)$ (next
 
 \begin{figure}
   \centering%
-  \includegraphics{graphics/baslat_cosh.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/baslat_cosh.pdf}%
   \caption{Lattice of harmonic cosines $\set{\cos(n\fvx)}{n=0,1,2,\ldots}$
            \label{fig:lat_cos0-cos7}}
 \end{figure}
@@ -433,7 +433,7 @@ trigexpand(cos(7*x));
 
 \begin{figure}
   \centering%
-  \includegraphics{graphics/baslat_cheby.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/baslat_cheby.pdf}%
   \caption{Lattice of Chebyshev polynomials $\set{T_n(x)}{n=0,1,2,3}$
            \label{fig:lat_T0-T7}}
 \end{figure}
@@ -522,7 +522,7 @@ can be expressed as a linear combination of $\seq{\cos n\fvx}{n\in\Z}$.
 
 \begin{figure}
   \centering%
-  \includegraphics{graphics/baslat_cose.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/baslat_cose.pdf}%
   \caption{Lattice of exponential cosines $\set{\cos^n\fvx}{n=0,1,2,3}$
     \label{fig:lat_cos^0-cos^7}}
 \end{figure}
@@ -963,9 +963,9 @@ Let $\Dn$ be the \fncte{Dirichlet Kernel} with period $\tau$ \xref{def:dkernel}.
 \begin{figure}
   \centering
   \begin{tabular}{cc}
-    \includegraphics{graphics/dirichlet1.pdf}&\includegraphics{graphics/dirichlet5.pdf}\\
+    \includegraphics{../common/math/graphics/pdfs/dirichlet1.pdf}&\includegraphics{../common/math/graphics/pdfs/dirichlet5.pdf}\\
     $n=1$&$n=5$\\
-    \includegraphics{graphics/dirichlet10.pdf}&\includegraphics{graphics/dirichlet10.pdf}\\
+    \includegraphics{../common/math/graphics/pdfs/dirichlet10.pdf}&\includegraphics{../common/math/graphics/pdfs/dirichlet10.pdf}\\
     $n=10$&$n=20$
   \end{tabular}
     \caption{
