--- a/common/transop.tex
+++ b/common/transop.tex
@@ -141,7 +141,7 @@ and the \opb{dilation operator} $\opDil$ (next).
 Let $\opT$ and $\opD$ be defined as in \prefpp{def:opTD}.
 \exbox{
 \begin{array}{cc}
-  \includegraphics{graphics/opTrn.pdf}&\includegraphics{graphics/opDil.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/opTrn.pdf}&\includegraphics{../common/math/graphics/pdfs/opDil.pdf}%
 \end{array}}
 \end{example}
 
@@ -167,8 +167,6 @@ Let $\opTrn_\tau$ be a \fncte{translation operator} \xref{def:opT}.
     && \text{by definition of $\opTrn_\tau$} && \text{\xref{def:opT}}
 \end{align*}
 \end{proof}
-
-
 
 In a linear space, every operator has an \structe{inverse}\ifsxref{relation}{def:rel_inverse}.
 Although the inverse always exists as a \rele{relation}\ifsxref{relation}{def:relation},
@@ -360,9 +358,9 @@ as demonstrated by \pref{cnt:DTTD} (next) and \prefpp{prop:DTTD}.
     }
   \qquad
   \begin{tabular}{ccc}
-     \includegraphics{graphics/tentfx.pdf}%
-    &\includegraphics{graphics/TD_tentfx.pdf}%
-    &\includegraphics{graphics/DT_tentfx.pdf}%
+     \includegraphics{../common/math/graphics/pdfs/tentfx.pdf}%
+    &\includegraphics{../common/math/graphics/pdfs/TD_tentfx.pdf}%
+    &\includegraphics{../common/math/graphics/pdfs/DT_tentfx.pdf}%
   \end{tabular}%
   }
 \end{counterex}
