port graphic calls to ../common/math/graphics/pdfs; xframes

--- a/common/topology.tex
+++ b/common/topology.tex
@@ -268,12 +268,12 @@ to topologies, while the non-distributive lattices are not.
    \mc{2}{c|}{\prope{non-distributive}/\emph{not} topologies}%
   &\mc{3}{c}{\prope{distributive}/\emph{are} topologies}%
   \\\hline%
-   %\includegraphics{graphics/lat5_m3_nontop.pdf}%
-   \includegraphics{graphics/lat5_m3_ss_xyz.pdf}%
-  &\includegraphics{graphics/lat5_n5_nontop.pdf}%
-  &\includegraphics{graphics/lat5_l2onm2_top.pdf}%
-  &\includegraphics{graphics/lat5_m2onl2_top.pdf}%
-  &\includegraphics{graphics/lat5_l5_top.pdf}%
+   %\includegraphics{../common/math/graphics/pdfs/lat5_m3_nontop.pdf}%
+   \includegraphics{../common/math/graphics/pdfs/lat5_m3_ss_xyz.pdf}%
+  &\includegraphics{../common/math/graphics/pdfs/lat5_n5_nontop.pdf}%
+  &\includegraphics{../common/math/graphics/pdfs/lat5_l2onm2_top.pdf}%
+  &\includegraphics{../common/math/graphics/pdfs/lat5_m2onl2_top.pdf}%
+  &\includegraphics{../common/math/graphics/pdfs/lat5_l5_top.pdf}%
 \end{tabular}}
 \end{example}
 \begin{proof}
@@ -338,7 +338,7 @@ to topologies, while the non-distributive lattices are not.
   order join operation $\join$.
 \end{example}
 \end{minipage}%
-\hfill\tbox{\includegraphics{graphics/latwavxyz.pdf}}\hfill\mbox{}\\%
+\hfill\tbox{\includegraphics{../common/math/graphics/pdfs/latwavxyz.pdf}}\hfill\mbox{}\\%
 
 %=======================================
 \subsection{Number of topologies}
@@ -958,12 +958,12 @@ Half of the sixteen families are not valid topologies because they do not contai
 and half of the remaining are not valid because they do not contain $\sid$.
 This leaves $16 \cprod \frac{1}{2} \cprod \frac{1}{2} = 4$ topologies.
 \end{minipage}%
-\hfill\tbox{\includegraphics{graphics/lattopxy.pdf}}\hfill\mbox{}\\%
+\hfill\tbox{\includegraphics{../common/math/graphics/pdfs/lattopxy.pdf}}\hfill\mbox{}\\%
 \end{example}
 
 \begin{figure}[th]
   \centering%
-  \includegraphics{graphics/latlattopxyz.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/latlattopxyz.pdf}%
   \caption{
     Lattice of topologies on $\setX\eqd\setn{x,y,z}$ (see \prefp{ex:set_lat_top_xyz})
     \label{fig:set_latlat_top_xyz}
@@ -1002,12 +1002,12 @@ these five sets are shaded in \pref{fig:set_latlat_top_xyz} and represented as s
 %\citetblt{%
 %  \citer{freese_latdraw}
 %  }%
-\tbox{\includegraphics{graphics/lat2xyzdotted.pdf}}\hfill\mbox{}\\
+\tbox{\includegraphics{../common/math/graphics/pdfs/lat2xyzdotted.pdf}}\hfill\mbox{}\\
 
 
 \begin{figure}[th]
   \centering%
-  \includegraphics{graphics/lattopxyz.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/lattopxyz.pdf}%
   \caption{
     Lattice of topologies of $\sid\eqd\setn{x,y,z}$ (see \prefp{ex:set_lat_top_xyz})
     \label{fig:set_lat_top_xyz}
@@ -1380,11 +1380,11 @@ The sets defined in \prefp{def:clsA} are illustrated to the right of $\setA$.
   %\hline
   set $\setA$ & \mc{4}{|c}{derived sets}
   \\\hline
-    \includegraphics{graphics/butterfly_setA.pdf}%
-  & \includegraphics{graphics/butterfly_clsA.pdf}%
-  & \includegraphics{graphics/butterfly_intA.pdf}%
-  & \includegraphics{graphics/butterfly_bndA.pdf}%
-  & \includegraphics{graphics/butterfly_drvA.pdf}%
+    \includegraphics{../common/math/graphics/pdfs/butterfly_setA.pdf}%
+  & \includegraphics{../common/math/graphics/pdfs/butterfly_clsA.pdf}%
+  & \includegraphics{../common/math/graphics/pdfs/butterfly_intA.pdf}%
+  & \includegraphics{../common/math/graphics/pdfs/butterfly_bndA.pdf}%
+  & \includegraphics{../common/math/graphics/pdfs/butterfly_drvA.pdf}%
   \\
   $\setA$ & $\clsA$ & $\intA$ & $\bndA$ & $\drvA$
 \end{tabular}}
@@ -2500,9 +2500,9 @@ Let $\ff$ be a function in $\clFxy$.
 {\psset{unit=0.1mm}%
 \exbox{%
 \begin{tabular}{ccc}
-  \includegraphics{graphics/cont_yx.pdf}%
- &\includegraphics{graphics/cont_yfy.pdf}%
- &\includegraphics{graphics/cont_ydy.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/cont_yx.pdf}%
+ &\includegraphics{../common/math/graphics/pdfs/cont_yfy.pdf}%
+ &\includegraphics{../common/math/graphics/pdfs/cont_ydy.pdf}%
  \\%
  \scs\prope{continuous} & \scs\prope{continuous} & \scs\prope{discontinuous}%
 \end{tabular}}%$
