--- a/common/vector.tex
+++ b/common/vector.tex
@@ -2,11 +2,6 @@
 % LaTeX File
 % Daniel J. Greenhoe
 %============================================================================
-
-
-
-
-
 %======================================
 \chapter{Linear spaces}
 %======================================
@@ -84,10 +79,6 @@
   \input{../common/math/graphics/spaces.tex}
   \caption{Lattice of mathematical spaces\label{fig:vector_spaces}}
 \end{figure}%
-
-
-
-
 %======================================
 \section{Definition and basic results}
 %======================================
@@ -203,11 +194,11 @@ the operator $\cdot$ is simply expressed with juxtaposition
 In doing this, there is no risk of ambiguity between %vector-vector addition
 scalar-vector multiplication and scalar-scalar multiplication
 because the operands uniquely identify the precise operator.\footnote{
-  {\em Operator overload} is a technique in which
+  \ope{Operator overload} is a technique in which
   two fundamentally different operators or functions
   share the same symbol or label. It is
   inherent in the programming language {\em C++} and is therein called
-  {\em operator overload}.
+  \ope{operator overload}.
   In C++, you can define two (or more) operators or functions that
   share the same symbol or name, but yet are completely different.
   Two such operators (or functions) are distinguished from each other
